gcc/testsuite/gcc.target/powerpc/dfp/dtstsfi-61.c
/* { dg-do compile } */
/* { dg-require-effective-target powerpc_vsx_ok } */
/* { dg-options "-mdejagnu-cpu=power8 -mvsx" } */

#include <altivec.h>

int doTestBCDSignificance (_Decimal64 *p)
{
  _Decimal64 source = *p;

  return __builtin_dfp_dtstsfi_ov (5, source);	/* { dg-error "'__builtin_dtstsfi_ov_dd' requires" } */
}

